@@ -22,6 +22,8 @@
 
 	<script>ankh</script>
 	<script>leatherdye</script>
+	<script>specialdye</script>
+	<script>runedye</script>
 	<script>archery_butte</script>
 	<script>bandages</script>
 	<script>blades</script>
